# aevb

./: README.md  aevb.py  configs.yaml  core.py  eqx.ipynb  flax.ipynb  jax.ipynb  main.ipynb  main.py  mnist.ipynb  mnist.py  pg.ipynb  pyproject.toml  requirements.txt  setup.py  tests.ipynb  tests_2.ipynb
aevb/: aevb.py  config.py  core.py  dist.py  equinox_util.py  eqx.py  eqx_util.py  flax.py  flax_util.py  nets_equinox.py  nets_eqx.py  nets_flax.py  types.py  util.py
aevb/_src/: aevb.py  config.py  core.py  dist.py  equinox_util.py  eqx.py  eqx_util.py  flax.py  flax_util.py  model_factory.py  nets_equinox.py  nets_eqx.py  nets_flax.py  types.py  util.py
configs/: config.yaml  default.yaml
examples/: config_test.ipynb  configs.yaml  mnist.py  mnist_eqx.ipynb  mnist_flax.py  nets.py
examples/equinox/: mnist.py  mnist_with_builtin_mlp.py
examples/flax/: mnist.py
examples/jax/: mnist.py
