[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aevb"
authors= [{name = "Paul Scemama", email = "ptscemama@gmail.com"}]
dynamic = ["version"]
dependencies = [
    "jax==0.4.*",
    "jaxlib==0.4.*",
    "optax==0.2.*",
]

[project.optional-dependencies]
examples = ["matplotlib", "datasets"]


[tool.setuptools.packages.find]
include = ["aevb", "aevb.*"]
exclude = ["tests*", "build*", "dist*", "notebooks*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "aevb.__version__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}