[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aevb"
authors= [{name = "Paul Scemama", email = "ptscemama@gmail.com"}]
dynamic = ["version"]
dependencies = [
    "jax>=0.4.16",
    "jaxlib>=0.4.16",
    "jaxopt>=0.8",
    "optax>=0.1.7",
    "typing-extensions>=4.4.0",
]

[project.optional-dependencies]
examples = ["matplotlib", "datasets"]


[tool.setuptools]
packages = ["aevb"]

[tool.setuptools_scm]
write_to = "aevb/_version.py"